# ETA_SWJTU

./: README.md
SWJTU电子科技协会单片机应用大赛优秀作品/: README.md
SWJTU电子科技协会单片机应用大赛优秀作品/2022-基于esp32+机器视觉的智慧书房系统/: readme.md.txt
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/: README.md  readme.md.txt
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/Hardware/Altium_NEW_clock/Board1/: PCB1.pcbdoc
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/Hardware/Altium_NEW_clock/keys/: PCB2.pcbdoc
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/code/stm32/: project.uvguix.86155  project.uvoptx  project.uvprojx
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/code/stm32/Listings/: project.map  startup_stm32f10x_md.lst
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/code/stm32/Objects/: core_cm3.crf  countsensor.crf  countsensor.d  delay.crf  delay.d  delay_1.crf  delay_1.d  dht11.crf  dht11.d  ds1302.crf  ds1302.d  encoder.crf  encoder.d  key.crf  key.d  led.crf  led.d  lightsensor.crf  lightsensor.d  main.crf  main.d  misc.crf  misc.d  oled.crf  oled.d  project.axf  project.build_log.htm  project.htm  project.lnp  project_Target 1.dep  seg_buf.crf  seg_buf.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  (+42 more)
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/code/stm32/hardware/: DHT11.c  DHT11.h  OLED.c  countsensor.c  countsensor.h  ds1302.c  ds1302.h  encoder.c  encoder.h  key.c  key.h  led.c  led.h  lightsensor.c  lightsensor.h  seg_buf.c  seg_buf.h
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/code/stm32/system/: Delay.c  Delay.h  timer.c
SWJTU电子科技协会单片机应用大赛优秀作品/2023-卷王闹钟（基于esp32和stm32）/code/stm32/user/: main.c
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于mpu6050的惯导系统/: readme.md.txt
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/: README.md
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/Hardware/Gerber_PCB_yyds_2_2023-05-24/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/code/123/: Project.uvguix.Dell  Project.uvoptx  Project.uvprojx
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/code/123/Hardware/: Key.c  Key.h  ds18b20.c  ds18b20.h  hc.c
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/code/123/Listings/: Project.map  startup_stm32f10x_md.lst
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/code/123/Objects/: Project.axf  Project.build_log.htm  Project.htm  Project_Target 1.dep  ds18b20.d  hc.crf  hc.d  main.crf  oled.crf  pwm.crf  stm32f10x_can.crf  stm32f10x_cec.crf  stm32f10x_crc.crf  stm32f10x_dac.crf  stm32f10x_dbgmcu.crf  stm32f10x_exti.crf  stm32f10x_i2c.crf  stm32f10x_pwr.crf  stm32f10x_rcc.crf  stm32f10x_sdio.crf  stm32f10x_spi.crf  stm32f10x_tim.crf  stm32f10x_usart.crf
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/code/123/User/: main.c
SWJTU电子科技协会单片机应用大赛优秀作品/2023-基于stm32的多功能风扇/code/123/yyds/: Project.uvguix.Dell  Project.uvoptx  Project.uvprojx
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一-全向轮小车/全向轮小车/6-9c8t6驱动编码器电机 - 副本/: Project.uvguix.Lenovo  Project.uvguix.meng  Project.uvguix.zhang  Project.uvguix_1.meng  Project.uvoptx  Project.uvprojx  delay.c  delay.h  pstwo.c  pstwo.h  sys.c  sys.h  usmart.c  usmart.h
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一-全向轮小车/全向轮小车/6-9c8t6驱动编码器电机 - 副本/Hardware/: Buzzer.c  Buzzer.h  Encoder.c  Encoder.h  Key.c  LED.c  LED.h  LightSensor.c  LightSensor.h  Motor.c  Motor.h  MotorRun.c  MotorRun.h  PWM.c  PWM.h  Timer.c  pstwo.h  usmart.c  usmart.h
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一-全向轮小车/全向轮小车/6-9c8t6驱动编码器电机 - 副本/Listings/: Project.map
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一-全向轮小车/全向轮小车/6-9c8t6驱动编码器电机 - 副本/Objects/: Project.axf  Project.build_log.htm  Project.htm  (+51 more)
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第一名-FreeRTOS全向轮遥控雷达小车3.0开源/FreeRTOS全向轮遥控雷达小车3.0开源/: 全向轮改造盖子.STL  舵机平台.123dx  舵机平台.stl
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第一名-FreeRTOS全向轮遥控雷达小车3.0开源/FreeRTOS全向轮遥控雷达小车3.0开源/FreeRTOS全向轮遥控雷达小车3.0/: pro.uvguix.30782  pro.uvguix.Administrator  pro.uvoptx  pro.uvprojx
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第三名-胶轮伪全向/threeWh/: .mxproject  README.md  threeWh.ioc
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第三名-胶轮伪全向/threeWh/MDK-ARM/: startup_stm32h743xx.lst  startup_stm32h743xx.s  threeWh+threeWh.cbuild.yml  threeWh+threeWh.cprj  threeWh.cbuild-idx.yml  threeWh.cbuild-pack.yml  threeWh.cbuild-set.yml  threeWh.cproject.yml  threeWh.csolution.yml  threeWh.uvguix.20576  threeWh.uvguix.32536  threeWh.uvguix.guishi  threeWh.uvguix.guishi.bak  threeWh.uvguix.z  threeWh.uvoptx  threeWh.uvprojx  threeWh_threeWh.sct
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第三名-胶轮伪全向/threeWh/MDK-ARM/tmp/threeWh/threeWh/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第二名-全向撞击小车/: Board1.epro
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第二名-全向撞击小车/freertoscar/: .mxproject  freertoscar.ioc
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第二名-全向撞击小车/freertoscar/.eide/: eide.json
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第二名-全向撞击小车/freertoscar/MDK-ARM/: JLinkLog.txt  freertoscar.uvguix.康天赐  freertoscar.uvoptx  freertoscar.uvprojx  startup_stm32f407xx.lst
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第二名-全向撞击小车/freertoscar/bsp/: MahonyAHRS.c  MahonyAHRS.h  oled.c  oled.h  oledfont.h  pid.c  pid.h
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道一第二名-全向撞击小车/freertoscar/task/: UT.c  UT.h  motor.c  motor.h
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道二第一名-智能药箱/药箱/药箱/: 1-PCB_PCB_×é777777_2.json  1-Schematic_×é777777.json  2-PCB_PCB_×é777777.json
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道二第三名-智能锁/KY/: AD.c  AD.h  DS18B20.c  DS18B20.h  Delay.c  MyRTC.c  NEC.c  NEC.h  OLED.c  PWM.c  Servo.c  Timer.c  Timer.h  getweather.c  getweather.h  serialcmc.c  serialcmc.h  weather.py  基于STM32的门锁优化装置.xmind  门锁智能优化装置立项答辩.pptx
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道二第二名-基于ESP32的智能四足机器人/esp32_robot/: platformio.ini
SWJTU电子科技协会单片机应用大赛优秀作品/十三届赛道二第二名-基于ESP32的智能四足机器人/esp32_robot/src/: main.cpp
嵌入式自学指南/: README.md  step0.md
电子类竞赛自学指南/: README.md  step0.md  step1.md
电子类竞赛自学指南/step2/: step2.md
(+393 files in other folders)
